[package]
name = "cuview"
version = "0.1.0"
authors = ["Steven Dwy <yoplitein+git@gmail.com>"]
edition = "2021"

[lib]
name = "cuview"
path = "src/lib.rs"

[[bin]]
name = "cuview"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"

[dependencies.hematite-nbt]
version = "0.5"
features = ["serde"]
