[package]
name = "cuview"
version = "0.1.0"
authors = ["Steven Dwy <yoplitein+git@gmail.com>"]
edition = "2021"

[lib]
name = "cuview"
path = "src/lib.rs"

[[bin]]
name = "cuview"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytemuck = "1.12"
glam = "0.21"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
zip = "0.6"

[dependencies.hematite-nbt]
version = "0.5"
features = ["serde"]
