[package]
name = "cuview"
version = "0.1.0"
authors = ["Steven Dwy <yoplitein+git@gmail.com>"]
edition = "2021"

[lib]
name = "cuview"
path = "src/lib.rs"

[[bin]]
name = "cuview"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
glam = "0.21"
lazy_static = "1.4"
png = "0.17"
pollster = "0.2"
serde = "1.0"
serde_json = "1.0"
wgpu = "0.13"
zip = "0.6"

[dependencies.bytemuck]
version = "1.12"
features = ["derive", "extern_crate_alloc"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.hematite-nbt]
version = "0.5"
features = ["serde"]
